--- a/assets/section-multicolumn.css
+++ b/assets/section-multicolumn.css
@@ -66,7 +66,7 @@
 }
 
 .multicolumn.background-primary .multicolumn-card {
-  background: rgb(var(--color-background)) linear-gradient(rgba(var(--color-foreground), 0.04), rgba(var(--color-foreground), 0.04));
+  background: rgb(var(--color-background));
 }
 
 .multicolumn-list h3 {
