--- a/assets/component-slideshow.css
+++ b/assets/component-slideshow.css
@@ -101,7 +101,9 @@ slideshow-component .slideshow.banner {
 @media screen and (min-width: 750px) {
   .slideshow__text-wrapper.banner__content {
     height: 100%;
-    padding: 5rem;
+    padding: 5rem 2rem;
+    margin: 0;
+    max-width: 100%;
   }
 }
 
@@ -203,4 +205,8 @@ slideshow-component:not(.page-width) .slider-buttons {
   visibility: hidden;
   opacity: 0;
   transform: scale(.8)
+}
+
+.slideshow__text.banner__box * {
+  color: #000000;
 }
