--- a/assets/component-slider.css
+++ b/assets/component-slider.css
@@ -266,26 +266,20 @@ slider-component.slider-component-full-width {
 }
 
 .slider-counter__link {
-  padding: 1rem;
-}
-
-@media screen and (max-width: 749px) {
-  .slider-counter__link {
-    padding: 0.7rem;
-  }
+  padding: 0 4px;
 }
 
 .slider-counter__link--dots .dot {
-  width: 1rem;
-  height: 1rem;
+  width: 8px;
+  height: 8px;
   border-radius: 50%;
-  border: 0.1rem solid rgba(var(--color-foreground), 0.5);
   padding: 0;
   display: block;
+  background-color: #ffffff;
 }
 
 .slider-counter__link--active.slider-counter__link--dots .dot {
-  background-color: rgb(var(--color-foreground));
+  opacity: 0.5;
 }
 
 @media screen and (forced-colors: active) {
