--- a/assets/component-price.css
+++ b/assets/component-price.css
@@ -21,6 +21,7 @@
 .price .price-item {
   display: inline-block;
   margin: 0 1rem 0 0;
+  font-size: 14px;
 }
 
 .price__regular .price-item--regular {
