--- a/assets/component-slider.css
+++ b/assets/component-slider.css
@@ -4,10 +4,6 @@ slider-component {
   display: block;
 }
 
-slider-component.slider-component-full-width {
-  --desktop-margin-left-first-item: 1.5rem;
-}
-
 @media screen and (max-width: 749px) {
   slider-component.page-width {
     padding: 0 1.5rem;
@@ -136,9 +132,6 @@ slider-component.slider-component-full-width {
 }
 
 @media screen and (min-width: 990px) {
-  .slider-component-desktop.page-width {
-    max-width: none;
-  }
 
   .slider--desktop {
     position: relative;
@@ -175,8 +168,8 @@ slider-component.slider-component-full-width {
   }
 
   .slider-component-full-width .slider--desktop .slider__slide:first-child {
-    margin-left: 1.5rem;
-    scroll-margin-left: 1.5rem;
+    margin-left: 0;
+    scroll-margin-left: 0;
   }
 
   /* Fix to show some space at the end of our sliders in all browsers */
@@ -185,23 +178,23 @@ slider-component.slider-component-full-width {
   }
 
   .slider--desktop.grid--5-col-desktop .grid__item {
-    width: calc( (100% - var(--desktop-margin-left-first-item)) / 5 - var(--grid-desktop-horizontal-spacing) * 2);
+    width: calc( (100% - var(--grid-desktop-horizontal-spacing) * 4) / 5);
   }
 
   .slider--desktop.grid--4-col-desktop .grid__item {
-    width: calc( (100% - var(--desktop-margin-left-first-item)) / 4 - var(--grid-desktop-horizontal-spacing) * 3);
+    width: calc( (100% - var(--grid-desktop-horizontal-spacing) * 3) / 4);
   }
 
   .slider--desktop.grid--3-col-desktop .grid__item {
-    width: calc( (100% - var(--desktop-margin-left-first-item)) / 3 - var(--grid-desktop-horizontal-spacing) * 4);
+    width: calc( (100% - var(--grid-desktop-horizontal-spacing) * 2) / 3);
   }
 
   .slider--desktop.grid--2-col-desktop .grid__item {
-    width: calc( (100% - var(--desktop-margin-left-first-item)) / 2 - var(--grid-desktop-horizontal-spacing) * 5);
+    width: calc( (100% - var(--grid-desktop-horizontal-spacing)) / 2);
   }
 
   .slider--desktop.grid--1-col-desktop .grid__item {
-    width: calc( (100% - var(--desktop-margin-left-first-item)) - var(--grid-desktop-horizontal-spacing) * 9);
+    width: 100%;
   }
 
   .slider.slider--desktop.contains-card--standard .slider__slide:not(.collection-list__item--no-media) {
@@ -280,6 +273,17 @@ slider-component.slider-component-full-width {
 
 .slider-counter__link--active.slider-counter__link--dots .dot {
   opacity: 0.5;
+}
+
+.featured-collection .slider-counter__link--dots .dot {
+  background-color: #000000;
+  opacity: 0.5;
+  width: 6px;
+  height: 6px;
+}
+
+.featured-collection .slider-counter__link--active.slider-counter__link--dots .dot {
+  opacity: 1;
 }
 
 @media screen and (forced-colors: active) {
