--- a/assets/base.css
+++ b/assets/base.css
@@ -246,7 +246,7 @@ html.no-js .no-js-hidden {
 .page-width {
   max-width: var(--page-width);
   margin: 0 auto;
-  padding: 0 1.5rem;
+  padding: 0 2rem;
 }
 
 .page-width-desktop {
@@ -442,8 +442,8 @@ h5,
 
 h1,
 .h1 {
-  font-size: 55px;
-  line-height: 52px;
+  font-size: 36px;
+  line-height: 34px;
 }
 
 @media only screen and (min-width: 750px) {
@@ -1139,6 +1139,31 @@ summary::-webkit-details-marker {
     width: calc(50% - var(--grid-desktop-horizontal-spacing) / 2);
     max-width: calc(50% - var(--grid-desktop-horizontal-spacing) / 2);
   }
+
+  .multicolumn-list.grid--6-col-desktop .grid__item {
+    width: calc(100% / 6);
+    max-width: calc(100% / 6);
+  }
+
+  .multicolumn-list.grid--5-col-desktop .grid__item {
+    width: calc(100% / 5);
+    max-width: calc(100% / 5);
+  }
+
+  .multicolumn-list.grid--4-col-desktop .grid__item {
+    width: calc(100% / 4);
+    max-width: calc(100% / 4);
+  }
+
+  .multicolumn-list.grid--3-col-desktop .grid__item {
+    width: calc(100% / 3);
+    max-width: calc(100% / 3);
+  }
+
+  .multicolumn-list.grid--2-col-desktop .grid__item {
+    width: calc(100% / 2);
+    max-width: calc(100% / 2);
+  }
 }
 
 @media screen and (min-width: 990px) {
@@ -1168,9 +1193,9 @@ summary::-webkit-details-marker {
     min-width: 35%;
   }
 
-  .grid--peek.slider .grid__item:first-of-type {
+  /* .grid--peek.slider .grid__item:first-of-type {
     margin-left: 1.5rem;
-  }
+  } */
 
   /* Fix to show some space at the end of our sliders in all browsers */
   .grid--peek.slider:after {
@@ -1183,12 +1208,12 @@ summary::-webkit-details-marker {
 
   .slider--tablet.grid--peek.grid--2-col-tablet-down .grid__item,
   .grid--peek .grid__item {
-    width: calc(50% - var(--grid-mobile-horizontal-spacing) - 3rem);
+    width: 50%;
   }
 
   .slider--tablet.grid--peek.grid--1-col-tablet-down .grid__item,
   .slider--mobile.grid--peek.grid--1-col-tablet-down .grid__item  {
-    width: calc(100% - var(--grid-mobile-horizontal-spacing) - 3rem);
+    width: 100%;
   }
 }
 
