--- a/assets/section-multicolumn.css
+++ b/assets/section-multicolumn.css
@@ -14,11 +14,6 @@
   .multicolumn .title-wrapper-with-link {
     margin-bottom: 3rem;
   }
-
-  .multicolumn .page-width {
-    padding-left: 0;
-    padding-right: 0;
-  }
 }
 
 .multicolumn-card__image-wrapper--third-width {
@@ -50,6 +45,7 @@
   margin-top: 0;
   margin-bottom: 0;
   padding: 0;
+  gap: 0 !important;
 }
 
 .multicolumn-list__item:only-child {
@@ -71,6 +67,11 @@
 
 .multicolumn-list h3 {
   line-height: calc(1 + 0.5 / max(1, var(--font-heading-scale)));
+  font-size: 32px;
+}
+
+.multicolumn-list .rte p {
+  font-size: 14px;
 }
 
 .multicolumn-list h3,
@@ -78,10 +79,14 @@
   margin: 0;
 }
 
+@media (max-width: 749px) {
+  .multicolumn-list h3 {
+    font-size: 20px;
+  }
+}
+
 .multicolumn-card-spacing {
   padding-top: 2.5rem;
-  margin-left: 2.5rem;
-  margin-right: 2.5rem;
 }
 
 .multicolumn-card__info > :nth-child(2) {
@@ -133,7 +138,8 @@
 }
 
 .multicolumn-card__info {
-  padding: 2.5rem;
+  padding: 2rem 0;
+  padding-right: 20%;
 }
 
 .background-none .multicolumn-card__info {
@@ -212,7 +218,7 @@
 
 .multicolumn-card__info .link {
   text-decoration: none;
-  font-size: inherit;
+  font-size: 14px;
   margin-top: 1.5rem;
 }
 
@@ -224,5 +230,35 @@
 @media screen and (min-width: 990px) {
   .multicolumn-list__item--empty {
     display: list-item;
+  }
+}
+
+
+@media (max-width: 745px) {
+  .multicolumn .slider-counter {
+    display: none;
+  }
+
+  .multicolumn slider-component {
+    position: relative;
+  }
+
+  .multicolumn .slider-buttons {
+    position: absolute;
+    width: 100%;
+    top: 35%;
+    left: 0;
+    z-index: 2;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .multicolumn .slider-button .icon {
+    height: 30px;
+    color: #ffffff;
+  }
+
+  .multicolumn .slider-button[disabled] .icon {
+    color: rgb(255, 255, 255, 0.3);
   }
 }
