--- a/assets/template-collection.css
+++ b/assets/template-collection.css
@@ -81,6 +81,12 @@
   }
 }
 
+@media (max-width: 745px) {
+  .featured-collection {
+    padding: 0 2rem;
+  }
+}
+
 .collection__view-all a:not(.link) {
   margin-top: 1rem;
 }
