--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -3,20 +3,11 @@
     {%- when 'announcement' -%}
       <div class="announcement-bar color-{{ block.settings.color_scheme }} gradient" role="region" aria-label="{{ 'sections.header.announcement' | t }}" {{ block.shopify_attributes }}>
         {%- if block.settings.text != blank -%}
-          {%- if block.settings.link != blank -%}
-            <a href="{{ block.settings.link }}" class="announcement-bar__link link link--text focus-inset animate-arrow">
-          {%- endif -%}
               <div class="page-width">
-                <p class="announcement-bar__message {{ block.settings.text_alignment }} h5">
-                  <span>{{ block.settings.text | escape }}</span>
-                  {%- if block.settings.link != blank -%}
-                    {% render 'icon-arrow' %}
-                  {%- endif -%}
-                </p>
+                <div class="announcement-bar__message {{ block.settings.text_alignment }} h5">
+                  {{ block.settings.text }}
+                </div>
               </div>
-          {%- if block.settings.link != blank -%}
-            </a>
-          {%- endif -%}
         {%- endif -%}
       </div>
   {%- endcase -%}
@@ -33,9 +24,9 @@
       "name": "t:sections.announcement-bar.blocks.announcement.name",
       "settings": [
         {
-          "type": "text",
+          "type": "richtext",
           "id": "text",
-          "default": "Welcome to our store",
+          "default": "<p>Welcome to our store</p>",
           "label": "t:sections.announcement-bar.blocks.announcement.settings.text.label"
         },
         {
@@ -85,11 +76,6 @@
           ],
           "default": "accent-1",
           "label": "t:sections.all.colors.label"
-        },
-        {
-          "type": "url",
-          "id": "link",
-          "label": "t:sections.announcement-bar.blocks.announcement.settings.link.label"
         }
       ]
     }
