--- a/assets/base.css
+++ b/assets/base.css
@@ -487,13 +487,13 @@ h4,
 
 h5,
 .h5 {
-  font-size: calc(var(--font-heading-scale) * 1.2rem);
+  font-size: 12px;
 }
 
 @media only screen and (min-width: 750px) {
   h5,
   .h5 {
-    font-size: calc(var(--font-heading-scale) * 1.3rem);
+    font-size: 12px;
   }
 }
 
@@ -2233,6 +2233,20 @@ product-info .loading-overlay:not(.hidden) ~ *,
 .announcement-bar {
   border-bottom: 0.1rem solid rgba(var(--color-foreground), 0.08);
   color: rgb(var(--color-foreground));
+  display: none;
+}
+
+.announcement-bar.active {
+  display: block;
+}
+
+.announcement-bar.active .announcement-bar__message {
+  animation: fadeIn 1s;
+}
+
+@keyframes fadeIn {
+  0% {opacity: 0;}
+  100% {opacity: 1;}
 }
 
 .announcement-bar__link {
@@ -2263,6 +2277,14 @@ product-info .loading-overlay:not(.hidden) ~ *,
   padding: 1rem 0;
   margin: 0;
   letter-spacing: 0.1rem;
+}
+
+.announcement-bar__message p {
+  margin: 0;
+}
+
+.announcement-bar__message * {
+  color: var(--color-base-text);
 }
 
 /* section-header */
