--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -1,7 +1,7 @@
 {%- for block in section.blocks -%}
   {%- case block.type -%}
     {%- when 'announcement' -%}
-      <div class="announcement-bar color-{{ block.settings.color_scheme }} gradient" role="region" aria-label="{{ 'sections.header.announcement' | t }}" {{ block.shopify_attributes }}>
+      <div class="announcement-bar {% if forloop.first %}active{% endif %} color-{{ block.settings.color_scheme }} gradient" role="region" aria-label="{{ 'sections.header.announcement' | t }}" {{ block.shopify_attributes }}>
         {%- if block.settings.text != blank -%}
               <div class="page-width">
                 <div class="announcement-bar__message {{ block.settings.text_alignment }} h5">
@@ -12,6 +12,7 @@
       </div>
   {%- endcase -%}
 {%- endfor -%}
+<script src="{{ 'announcement-bar.js' | asset_url }}" defer="defer"></script>
 
 {% schema %}
 {
