--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -204,8 +204,8 @@
         min-height: 100%;
         margin: 0;
         font-size: 1.4rem;
-        letter-spacing: 0.06rem;
-        line-height: calc(1 + 0.8 / var(--font-body-scale));
+        letter-spacing: 0rem;
+        line-height: 1.1;
         font-family: var(--font-body-family);
         font-style: var(--font-body-style);
         font-weight: var(--font-body-weight);
