--- a/assets/component-image-with-text.css
+++ b/assets/component-image-with-text.css
@@ -88,6 +88,13 @@
   z-index: 1;
 }
 
+@media (max-width: 749px) {
+  .image-with-text__content {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
 .image-with-text .grid__item::after {
   content: '';
   position: absolute;
@@ -371,4 +378,10 @@
 .image-with-text__text {
   max-width: 30rem;
   margin: 2rem auto 0;
+}
+
+@media (max-width: 749px) {
+  .image-with-text__text {
+    max-width: 100%;
+  }
 }
