--- a/assets/section-rich-text.css
+++ b/assets/section-rich-text.css
@@ -13,6 +13,12 @@
   width: calc(100% - 8rem / var(--font-body-scale));
 }
 
+@media (max-width: 749px) {
+  .rich-text__wrapper {
+    width: 100% !important;
+  }
+}
+
 .rich-text__blocks {
   width: 100%;
 }
