--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -167,11 +167,8 @@
                       placeholder="{{ 'newsletter.label' | t }}"
                       required
                     >
-                    <label class="field__label" for="NewsletterForm--{{ section.id }}">
-                      {{ 'newsletter.label' | t }}
-                    </label>
                     <button type="submit" class="newsletter-form__button field__button" name="commit" id="Subscribe" aria-label="{{ 'newsletter.button_label' | t }}">
-                      {% render 'icon-arrow' %}
+                      {{ 'newsletter.button_label' | t }}
                     </button>
                   </div>
                   {%- if form.errors -%}
