--- a/assets/base.css
+++ b/assets/base.css
@@ -2715,9 +2715,11 @@ details[open] > .header__submenu {
 }
 
 .header__menu-item {
-  padding: 1.2rem;
+  padding: 8px 14px;
   text-decoration: none;
   color: rgba(var(--color-foreground), 0.75);
+  font-size: 0.85em;
+  font-weight: 500;
 }
 
 .header__menu-item:hover {
@@ -2725,16 +2727,12 @@ details[open] > .header__submenu {
 }
 
 .header__menu-item span {
-  transition: text-decoration var(--duration-short) ease;
+  transition: text-decoration var(--duration-long) ease;
 }
 
 .header__menu-item:hover span {
   text-decoration: underline;
   text-underline-offset: 0.3rem;
-}
-
-details[open] > .header__menu-item {
-  text-decoration: underline;
 }
 
 details[open]:hover > .header__menu-item {
