--- a/assets/component-mega-menu.css
+++ b/assets/component-mega-menu.css
@@ -47,15 +47,15 @@
   display: block;
   font-size: 1.3rem;
   line-height: calc(1 + 0.3 / var(--font-body-scale));
-  padding-bottom: 0.6rem;
-  padding-top: 0.6rem;
+  padding-bottom: 1.2rem;
+  padding-top: 1.2rem;
   text-decoration: none;
   transition: text-decoration var(--duration-short) ease;
   word-wrap: break-word;
 }
 
 .mega-menu__link--level-2 {
-  font-size: 1.4rem;
+  font-size: 1.2rem;
 }
 
 .mega-menu__link--level-2:not(:only-child) {
@@ -70,8 +70,7 @@
 }
 
 .header--top-center .mega-menu__list > li {
-  width: 16%;
-  padding-right: 2.4rem;
+  padding-right: 0.5rem;
 }
 
 .mega-menu__link:hover,
@@ -85,7 +84,13 @@
 }
 
 .mega-menu .mega-menu__list--condensed {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  gap: 0;
+  flex-wrap: wrap;
+  max-height: 380px;
+  width: 40%;
+  padding: 0;
 }
 
 .mega-menu__list--condensed .mega-menu__link {
